--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -637,12 +637,13 @@
     @include media-breakpoint-down(lg) {
       padding-left: 0;
       padding-right: 0;
-      // --bs-gutter-x: #{0};
     }
   }
   overflow-y: auto;
   overflow-x: hidden;
-  // width: calc(100% - 14px);
+  @include media-breakpoint-up(lg) {
+    overflow: hidden;
+  }
   position: absolute;
   z-index: 1000;
   box-shadow: 0 10px 12px 0 rgba(0, 0, 0, 0.09);
@@ -661,10 +662,9 @@
     @include media-breakpoint-down(lg) {
       --bs-gutter-x: #{0};
     }
-    // --bs-gutter-x: #{0};
     @include media-breakpoint-up(lg) {
       padding: rem(21) 0 0 rem(16);
-      // --bs-gutter-x: #{16px};
+      height: 100%;
     }
   }
   &__title {
@@ -694,21 +694,14 @@
     }
   }
   &__order-call {
-    // @include media-breakpoint-up(lg) {
-    //   position: absolute;
-    //   bottom: -12px;
-    //   left: rem(24);
-    // }
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-bottom: 24px;
   }
   &__text {
     font-weight: 600;
     font-size: rem(14);
     opacity: .5;
-    // color: $secondary;
   }
   &__tel {
     display: inline-block;
@@ -721,11 +714,18 @@
 			color: $secondary;
 		}
   }
-  .col-lg-3 {
-    @include media-breakpoint-down(lg) {
-      padding-left: rem(12);
-      padding-right: rem(12);
-      border-top: 1px solid #e2e9f4;
+  .col-lg-4 {
+    max-height: calc(100vh - 78px);
+    overflow-y: auto;
+    padding-bottom: rem(12);
+    padding-left: rem(12);
+    padding-right: rem(12);
+    border-top: 1px solid #e2e9f4;
+    @include media-breakpoint-up(lg) {
+      border-top: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
   }
   .often {
@@ -737,25 +737,23 @@
       flex-direction: column;
       flex-wrap: nowrap;
       align-items:start;
-      margin-bottom: rem(70);
     }
   }
   .col-lg {
     position: relative;
     @include media-breakpoint-up(lg) {
-      margin-left: rem(40);
+      padding-left: 0;
     }
     @include media-breakpoint-up(lg) {
       &::before {
         content: '';
         position: absolute;
         top: -16px;
-        left: 14px;
+        left: 0;
         width: 1px;
         background: #e2e9f4;
-        // height: 440px;
         height: 1000px;
-        max-height: calc(100% + 16px);
+        max-height: calc(100% + 40px);
 
         @include media-breakpoint-up(xl) {
         }
@@ -811,6 +809,13 @@
       }
     }
   }
+  &__res-links:not(.empty) {
+    @include media-breakpoint-up(lg) {
+      height: 372px;
+      max-height: calc(100vh - 110px);
+      overflow-y: auto;
+    }
+  }
   &__res-links.empty {
     display: flex;
     flex-direction: column;
@@ -854,7 +859,6 @@
   position: relative;
   gap: rem(12);
   padding: rem(12);
-  // border-left: 1px solid #e2e9f4;
   &:last-child {
     border-radius: 0 0 18px 0;
   }
