--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -765,24 +765,24 @@
     position: relative;
     border-bottom: 1px solid #E2E9F4;
     @include media-breakpoint-up(lg) {
+      margin-top: rem(-10);
       padding-left: rem(12);
     }
     .swiper-wrapper {
       max-width: 100vw;
     }
     .tabs-slider--js .swiper-slide {
-      padding: rem(12) rem(9);
-      padding-top: rem(6);
       width: max-content;
-      @include media-breakpoint-up(lg) {
-        padding: 18px 12px;
-        padding-top: rem(3);
-      }
       a {
+        display: block;
+        padding: rem(12) rem(9);
         opacity: 0.5;
         font-weight: 600;
         font-size: 12px;
         color: $secondary;
+        @include media-breakpoint-up(lg) {
+          padding: 18px 12px;
+        }
         &:hover {
           opacity: 1;
         }
