--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -123,6 +123,10 @@
 	font-size:math.div(40,10)*1rem;
 	width: math.div(103,40)*1em;
 }
+.icon-mail {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-measuring {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(16,16)*1em;
