--- a/sourse/pug/blocks/sPromo/_sPromo.scss
+++ b/sourse/pug/blocks/sPromo/_sPromo.scss
@@ -13,6 +13,7 @@
 
     &__inner-wrap {
       background: white;
+      min-height: 100vh;
       padding-bottom: rem(24);
     }
     .container.container-max {
