fix: fix title wrap

--- a/sourse/pug/blocks/sPromo/_sPromo.pug
+++ b/sourse/pug/blocks/sPromo/_sPromo.pug
@@ -10,7 +10,7 @@ mixin sPromo(data)
 			+e.item
 				+e.title.text-center
 					h3 Изготовление и установка навесов под ключ в Москве и МО
-					p В соответствии с нормативными нагрузками и запасом прочности +40%
+					p В соответствии с нормативными нагрузками и&nbsp;запасом прочности +40%
 				+e.feature-list.text-center
 					+e.feature-item.accent Более 2370 навесов построили с&nbsp;2019&nbsp;г
 					+e.feature-item Официально и честно
